author and book integration
